--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -20,16 +20,16 @@
       <tr>
         <th>Link</th>
         <td class="flex items-center">
-          <%= form.url_field :link, class: 'form-control w-full' %>
+          <%= form.url_field :url, class: 'form-control w-full' %>
           <a class="p-2 m-2 rounded-full bg-gray-200 text-gray-800 w-8 h-8 flex items-center justify-center hover:bg-gray-300 cursor-pointer"
              target="_blank"
-             href="<%= @product.link %>"
+             href="<%= @product.url %>"
           >
             <i class="fa-solid fa-globe"></i>
           </a>
           <%= render CheckLink::ShowComponent.new(
             productId: @product.slug,
-            checkLinkPath: check_link_admin_products_path,
+            checkLinkPath: check_url_admin_products_path,
             updateProductURL: admin_product_url(@product),
           ) %>
         </td>
