--- a/app/views/products/_inline_card.html.erb
+++ b/app/views/products/_inline_card.html.erb
@@ -1,4 +1,4 @@
-<%= link_to product.link do %>
+<%= link_to product.url do %>
   <div class="inline-flex items-center p-2 bg-gray-50 rounded-full hover:bg-gray-100">
     <i class="px-2 fa-xl fa-solid fa-plug text-gray-600"></i>
     <div class="flex flex-row flex-wrap items-center mx-2">
