--- a/app/views/products/_main.html.erb
+++ b/app/views/products/_main.html.erb
@@ -25,6 +25,6 @@
       <!--      </div>-->
       <!--      <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ms-3">5.0</span>-->
     </div>
-    <%= render partial: 'shared/button', locals: { link: product.link, text: 'Go to Website' } %>
+    <%= render partial: 'shared/button', locals: { link: product.url, text: 'Go to Website' } %>
   </div>
 <% end %>
