--- a/app/views/admin/compatibility/index.html.erb
+++ b/app/views/admin/compatibility/index.html.erb
@@ -3,14 +3,19 @@
   <div class="py-4">
   </div>
   <% @compatibility_links.each do |adapter, links| %>
-    <h1 class="font-bold text-2xl"><%= adapter.brand.name %> - <%= adapter.name %></h1>
-    <% links.each do |type, products| %>
-      <h2 class="font-semibold text-xl"><%= type.pluralize %></h2>
-      <% products.each do |product| %>
-        <%= product.name %>
+    <div class="py-4">
+      <h1 class="font-bold text-2xl"><%= adapter.brand.name %> - <%= adapter.name %></h1>
+      <% links.each do |type, products| %>
+        <h2 class="font-semibold text-xl"><%= type.pluralize %></h2>
+        <%= render SearchProductMulti::ShowComponent.new(searchUrl: products_search_url,
+                                                         initialProducts: products,
+                                                         addLinkUrl: link_admin_compatibility_index_url,
+                                                         unlinkUrl: unlink_admin_compatibility_index_url,
+                                                         adapter: adapter,
+                                                         filter: { types: type }
+        )
+        %>
       <% end %>
-
-    <% end %>
-    <%#= render 'shared/table', collection: links, attributes: ['adapter.name', 'adapter.brand.name', 'product_a.name', 'product_b.name'] %>
+    </div>
   <% end %>
 </div>
