--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -62,7 +62,12 @@
         <td class="<%= product.image.present? ? 'text-green-500' : 'text-red-500' %>">
           <%= product.image.present? ? "✔" : "✘" %>
         </td>
-        <td><%= product.compatible_products.map { |p| p.name }.join(", ") %></td>
+        <td>
+          <% product.compatible_products_by_adapter.each do |adapter, products| %>
+            <p class="text-sm font-semibold text-gray-300">with: <%= adapter.name %></p>
+            <p class="text-md"><%= products.map {|p| p.name}.join(", ") %></p>
+          <% end %>
+        </td>
         <td class="flex">
           <%= button_to 'Edit', edit_admin_product_path(product), method: :get,
                         class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-1"
