--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <% end %>
 
   <% flash.each do |message_type, message| %>
-    <div id="flash-message-<%= message %>" class="fixed top-5 left-1/2 transform -translate-x-1/2 z-50 w-4/5 max-w-2xl">
+    <div id="flash-message-<%= hash_string_to_number message %>" class="fixed top-5 left-1/2 transform -translate-x-1/2 z-50 w-4/5 max-w-2xl">
       <% alert_classes = 'bg-red-100 text-red-700 border-red-200'
          notice_classes = 'bg-yellow-100 text-yellow-700 border-yellow-200'
          error_classes = 'bg-red-100 text-red-700 border-red-200'
@@ -43,7 +43,7 @@
       %>
       <%= content_tag :div, class: "alert #{flash_class} border rounded-md p-4 mb-5" do -%>
         <%= message %>
-        <button type="button" class="close" data-dismiss="notice" onclick="closeFlash('<%= message %>')" style="float: right; font-size: 1.5rem; font-weight: 700; line-height: 1; color: #000; text-shadow: 0 1px 0 #fff; opacity: .5;">
+        <button type="button" class="close" data-dismiss="notice" onclick="closeFlash('<%= hash_string_to_number message %>')" style="float: right; font-size: 1.5rem; font-weight: 700; line-height: 1; color: #000; text-shadow: 0 1px 0 #fff; opacity: .5;">
           <span aria-hidden="true">×</span>
           <span class="sr-only">Close</span>
         </button>
