chore: add adapters nav link

--- a/app/views/admin/shared/_admin_nav.html.erb
+++ b/app/views/admin/shared/_admin_nav.html.erb
@@ -5,6 +5,7 @@
       <li class="p-2"><%= link_to 'Products', admin_products_path, class: "text-blue-500 hover:text-blue-700" %></li>
       <li class="p-2"><%= link_to 'Brands', admin_brands_path, class: "text-blue-500 hover:text-blue-700" %></li>
       <li class="p-2"><%= link_to 'Compatibility', admin_compatibility_index_path, class: "text-blue-500 hover:text-blue-700" %></li>
+      <li class="p-2"><%= link_to 'Adapters', admin_products_path(type: 'Adapter'), class: "text-blue-500 hover:text-blue-700" %></li>
     </ul>
   </nav>
 </div>
