chore: improve brand query

--- a/app/views/admin/brands/index.html.erb
+++ b/app/views/admin/brands/index.html.erb
@@ -26,7 +26,7 @@
             <%= render 'shared/website_button', url: brand.website %>
           <% end %>
         </td>
-        <td><%= brand.product_count %></td>
+        <td><%= brand.products_count %></td>
         <td class="flex">
           <%= button_to 'edit', edit_admin_brand_path(brand), method: :get,
                         class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mx-1"
