--- a/app/views/admin/compatibility/index.html.erb
+++ b/app/views/admin/compatibility/index.html.erb
@@ -2,9 +2,17 @@
   <h1 class="font-bold text-4xl">Admin::Compatible#index</h1>
   <div class="py-4">
   </div>
-  <% @compatibility_links.each do |adapter, links| %>
+  <% @adapters_with_products_by_type.each do |adapter, links| %>
     <div class="py-4">
-      <h1 class="font-bold text-2xl"><%= adapter.brand.name %> - <%= adapter.name %></h1>
+      <%= link_to edit_admin_product_path(adapter) do %>
+        <h1 class="font-bold text-2xl text-gray-700">
+          <span> <%= adapter.name %> </span>
+          <span class="font-bold text-2xl text-gray-300">by <%= adapter.brand.name %></span>
+        </h1>
+      <% end %>
+      <div class="w-32">
+        <%= render 'products/image', product: adapter %>
+      </div>
       <% links.each do |type, products| %>
         <h2 class="font-semibold text-xl"><%= type.pluralize %></h2>
         <%= render SearchProductMulti::ShowComponent.new(searchUrl: products_search_url,
