chore: check presence in js

--- a/app/views/admin/shared/_file_upload_form.html.erb
+++ b/app/views/admin/shared/_file_upload_form.html.erb
@@ -18,6 +18,10 @@
             const fileInput = document.getElementById(`file_<%= id %>`);
             const submitButton = document.getElementById(`submit_<%= id %>`);
 
+            if (!fileInput ||!submitButton) {
+              return;
+            }
+
             fileInput.addEventListener('change', function () {
                 submitButton.disabled = !this.files.length;
             });
