feat: improved product carousel

--- a/app/views/products/_compatible_product_carousel.html.erb
+++ b/app/views/products/_compatible_product_carousel.html.erb
@@ -2,6 +2,7 @@
   <%= render partial: 'shared/subtitle', locals: { text: 'Compatible products for ' + product.name + ':' } %>
   <div class="mt-4">
     <%= compatible_products = product.compatible_products_by_adapter.values.flatten
-        render partial: 'image_carousel', locals: { products: compatible_products } %>
+       render ProductCarousel::ShowComponent.new(items: compatible_products)
+    %>
   </div>
 </div>
