--- a/app/views/products/compatible.html.erb
+++ b/app/views/products/compatible.html.erb
@@ -8,13 +8,13 @@
       <%= render partial: 'shared/hero', locals: { title: 'Sorry, they\'re not compatible.' } %>
     <% end %>
 
-    <div class="mt-8 flex">
-      <div class="p-8 w-full">
+    <div class="mt-8 flex flex-wrap md:flex-nowrap">
+      <div class="p-8 w-full flex flex-col items-center">
         <%= render partial: 'products/main', locals: { product: @product_a } %>
       </div>
-      <div class="py-8 w-full flex flex-col items-center justify-between">
+      <div class="py-8 w-full flex flex-col items-center justify-between order-first md:order-none">
         <% if @adapter.present? %>
-          <div class="w-1/2">
+          <div class="w-1/2 max-w-2xl">
             <img src="<%= asset_path('check.svg') %>" alt="Check mark"/>
           </div>
           <% if @adapter.present? %>
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <div class="p-8 w-full">
+      <div class="p-8 w-full flex flex-col items-center">
         <%= render partial: 'products/main', locals: { product: @product_b } %>
       </div>
     </div>
