--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -80,7 +80,7 @@
                                                            addLinkUrl: link_admin_compatibility_index_url,
                                                            unlinkUrl: unlink_admin_compatibility_index_url,
                                                            adapter: @product,
-                                                           filter: { not: { types: ['Adapter', productable_type] } })
+                                                           filter: { types: [productable_type] })
           %>
         </div>
       <% end %>
