feat: (admin) create new product

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -90,4 +90,7 @@
     <% end %>
     </tbody>
   </table>
+  <div class="py-4">
+    <%= render partial: 'shared/button', locals: { text: 'New Product', link: new_admin_product_path } %>
+  </div>
 </div>
