feat: (admin) create new brand

--- a/app/views/admin/brands/index.html.erb
+++ b/app/views/admin/brands/index.html.erb
@@ -42,4 +42,5 @@
     </tbody>
   </table>
   <h2>total product count: <%= @total_product_count %></h2>
+  <%= render 'shared/button', text: 'New Brand', link: new_admin_brand_path %>
 </div>
