--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -13,34 +13,40 @@
   </div>
 
   <form action="<%= admin_products_path %>" method="get" class="mb-4">
-    <div class="flex flex-wrap flex-col items-start md:flex-row md:items-center ">
+    <div data-controller="toggle-visibility" class="flex flex-col md:flex-row">
       <div class="m-2 text-gray-500">
-        <i class="fa-solid fa-filter"></i>
-        <p class="inline">filters</p>
-      </div>
-      <div class="mr-2">
-        <input type="text" name="search" placeholder="Search products" class="px-2 py-1 border rounded">
-      </div>
-      <div class="mr-2">
-        <%= render partial: 'shared/query_param_filter_select', locals: {
-          name: 'type',
-          param: :type,
-          options: ['Seat', 'Stroller', 'Adapter'],
-          label_text: 'Type'
-        } %>
-      </div>
-      <div class="mr-2">
-        <%= render partial: 'shared/query_param_filter_select', locals: {
-          name: 'brand',
-          param: :brand,
-          options: @brands.map { |brand| brand.name },
-          label_text: 'Brand'
-        } %>
-      </div>
-      <div class="mr-2">
-        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
-          Search
+        <button data-action="click->toggle-visibility#toggle" type="button">
+          <i class="fa-solid fa-filter"></i>
+          <span class="inline">filters</span>
         </button>
+      </div>
+      <div data-toggle-visibility-target="element"
+           class="hidden flex flex-wrap flex-col items-start md:flex-row md:items-center "
+      >
+        <div class="mr-2">
+          <input type="text" name="search" placeholder="Search products" class="px-2 py-1 border rounded">
+        </div>
+        <div class="mr-2">
+          <%= render partial: 'shared/query_param_filter_select', locals: {
+            name: 'type',
+            param: :type,
+            options: ['Seat', 'Stroller', 'Adapter'],
+            label_text: 'Type'
+          } %>
+        </div>
+        <div class="mr-2">
+          <%= render partial: 'shared/query_param_filter_select', locals: {
+            name: 'brand',
+            param: :brand,
+            options: @brands.map { |brand| brand.name },
+            label_text: 'Brand'
+          } %>
+        </div>
+        <div class="mr-2">
+          <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
+            Search
+          </button>
+        </div>
       </div>
     </div>
   </form>
