feat: (landing page) reword landing page text

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <%= render layout: 'shared/container' do %>
   <div>
-    <%= render partial: 'shared/hero', locals: { title: 'Is your stroller compatible?' } %>
+    <%= render partial: 'shared/hero', locals: { title: 'Check if your stroller fits your car seat' } %>
     <div class="mt-8">
       <%= render partial: 'shared/subtitle', locals: { text: 'Search for your stroller' } %>
       <div class="min-h-96">
