--- a/app/views/shared/_container.html.erb
+++ b/app/views/shared/_container.html.erb
@@ -1,3 +1,12 @@
-<div class="flex justify-center h-full w-full mt-12 text-gray-700">
-  <%= yield %>
+<div class="flex flex-col items-center h-full w-full">
+  <div class="flex justify-center">
+    <img
+      alt="Fit My Stroller.com logo"
+      class="fill-purple-800 w-12 mt-12 mb-12"
+      src=<%= asset_path('logo-purple.svg') %>
+      />
+  </div>
+  <div class="flex flex-row justify-center h-full w-full text-gray-700">
+    <%= yield %>
+  </div>
 </div>
