--- a/app/views/admin/brands/edit.html.erb
+++ b/app/views/admin/brands/edit.html.erb
@@ -1,7 +1,25 @@
 <div>
   <h1 class="font-bold text-4xl">Admin::Brands#edit</h1>
-  <%= render 'shared/edit_form', model: @brand, url: admin_brand_url, fields: {
-    name: :text_field,
-    website: :url_field,
-  } %>
+  <%= render 'shared/edit_form',
+             model: @brand,
+             url: admin_brand_url,
+             fields: {
+               name: { :type => :text_field },
+               website: { :type => :url_field },
+               tag_ids: { :type => :checkbox, :options => @brand.tags },
+             } %>
+  <div class="m-1 py-4">
+    <%= form_with(model: Tag.new, url: admin_tags_url, method: :post, local: true) do |form| %>
+      <div class="flex">
+        <div class="actions mr-2">
+          <%= form.submit "Add Tag", class: "button inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-500 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+        </div>
+        <div class="field">
+          <%= form.text_field :label, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50" %>
+        </div>
+      </div>
+      <%= form.hidden_field :brand_id, value: @brand.id %>
+    <% end %>
+  </div>
+
 </div>
