--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -80,9 +80,9 @@
       <% ['Seat', 'Stroller'].each do |productable_type| %>
         <div class="py-2">
           <h1><%= productable_type %></h1>
-          <%= compatible_products_for_type = @product.productable.products.where(productable_type: productable_type)
+          <%= compatible_products_for_type = @product.compatible_products.filter { |p| p.product.productable_type == productable_type }
               render SearchProductMulti::ShowComponent.new(searchUrl: products_search_url,
-                                                           initialProducts: compatible_products_for_type,
+                                                           initialProducts: compatible_products_for_type.map { |p| p.product.serializable_hash.merge(from_link: p.from_link) },
                                                            addLinkUrl: link_admin_compatibility_index_url,
                                                            unlinkUrl: unlink_admin_compatibility_index_url,
                                                            adapter: @product,
