refactor: (tags) make tag fetch logic more railsy

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -87,8 +87,8 @@
           <% end %>
         </td>
         <td>
-          <% product.compatible_products_by_adapter.each do |adapter, products| %>
-            <p class="text-sm font-semibold text-gray-300">with: <%= adapter.name %></p>
+          <% product.compatible_products_by_adapter.each do |adapter_slug, products| %>
+            <p class="text-sm font-semibold text-gray-300">with: <%= adapter_slug %></p>
             <p class="text-md"><%= products.map { |p| p.product.name }.join(", ") %></p>
           <% end %>
         </td>
